k8s/base/service-otel-collector.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  labels:
    app.kubernetes.io/name: otel-collector
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: otel-collector
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: otlp-grpc
    - name: otlp-http
      port: 4318
      targetPort: otlp-http
    - name: syslog
      port: 5140
      targetPort: syslog
    - name: tcplog
      port: 5141
      targetPort: tcplog
    - name: health
      port: 13133
      targetPort: health
